<resources>
    <string name="app_name">NoYawa On The Go</string>
    <string name="action_settings">Settings</string>
    <string name="prefServerDefault">http://41.191.245.72/noyawagh/api/v2/</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="select">Select a category </string>
    <string name="select_audio">Select one to listen</string>
    <string name="settings">Settings</string>
    <string name="language_english">English</string>
    <string name="language_ewe">Ewe</string>
    <string name="reg_date">New Client Registration</string>
    <string name="sex">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="contact_phone_number">Phone Number :</string>
    <string name="address">Location :</string>
    <string name="region">Region :</string>
    <string name="new_client_registration">New Client Registration</string>
    <string name="language_dagbani">Dagbani</string>
    <string name="language_gonja">Gonja</string>
    <string name="language_hausa">Hausa</string>
    <string name="language_dagaare">Dagaare</string>
    <string name="age">Age :</string>
    <string name="education">Education :</string>
    <string name="channel">Channel :</string>
    <string name="language">Language :</string>
    <string name="location_status">Location Status :</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
    <string name="language_kaseem">Kasim</string>
    <string name="language_twi">Twi</string>
    <string name="language_dangme">Dangme</string>
    <string name="Meetings">Meetings</string>
    <string name="male_attendance">Male Attendance :</string>
    <string name="female_attendance">Female Attendance :</string>
    <string name="start">Start</string>
    <string name="meeting_title">Meeting Title :</string>
    <string name="comments">Comments :</string>
    <string name="some_hint">
       Type here to filter&#8230;
    </string>

</resources>
