<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="10dp"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:paddingTop="50dp" >

        <RadioGroup
            android:id="@+id/language_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/language_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/language_english"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_ewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_ewe"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_dagbani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_dagbani"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_gonja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_gonja"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_hausa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_hausa"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_dagaare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_dagaare"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_kassem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_kaseem"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_twi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_twi"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/language_dangme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_dangme"
                android:textColor="@color/Peach"
                android:textSize="20sp"
                android:textStyle="italic" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_done" />

    </LinearLayout>

</LinearLayout>