<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="391dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/footer" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/new_client_registration"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone_number"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:phoneNumber="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radioGroup_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/apptheme_btn_radio_holo_light"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/apptheme_btn_radio_holo_light"
                    android:text="@string/female" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/spinner_education"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView18"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/channel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/spinner_channel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_location_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/location_status"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic" />

            <RadioGroup
                android:id="@+id/radioGroup_location_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_urban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/apptheme_btn_radio_holo_light"
                    android:checked="true"
                    android:text="@string/urban" />

                <RadioButton
                    android:id="@+id/radio_rural"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/apptheme_btn_radio_holo_light"
                    android:text="@string/rural" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/spinner_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/Peach"
                android:textStyle="italic"
                android:typeface="serif" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>